--- a/app/global.css
+++ b/app/global.css
@@ -40,7 +40,8 @@
 
 html,
 body {
-    max-width: 150vw;
+    max-width: 100vw;
+    width: 100%;
     overflow-x: hidden;
     background-color: var(--background-color);
     color: var(--primary-text-color);
